Get multiple accounts logging tests